# UC7.5

./: .cursorrules  .gitignore  README.md  crown.html  pyproject.toml
.github/: copilot-instructions.md
governance/: archival-governance-system.md
pkm/: __init__.py  cli.py  embeddings.py
